packages/jsii/test/negatives/neg.class-name.1.ts
///!MATCH_ERROR: Type names must use pascal-case: My_class

export class My_class {

}
